--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_reactive_ble: ^5.1.0
+  permission_handler: ^11.3.1
+  wifi_iot: ^0.3.19+2
+  wifi_scan: ^0.4.1+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
