--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_reactive_ble: ^5.1.0
   permission_handler: ^11.3.1
   flutter_blue_plus: ^1.35.5
+  provider: ^6.1.2
   wifi_iot: ^0.3.19+2
   wifi_scan: ^0.4.1+2
 
